feat: add drone plan endpoint
